--- a/SpryAssets/SpryMenuBarHorizontal.css
+++ b/SpryAssets/SpryMenuBarHorizontal.css
@@ -19,9 +19,7 @@ ul.MenuBarHorizontal
 	font-size: 100%;
 	cursor: default;
 	width: auto;
-	color: #09F;
-	text-align: center;
-	margin-left: 10%;
+	height: 12%;
 }
 /* Set the active Menu Bar with this class, currently setting z-index to accomodate IE rendering bug: http://therealcrisp.xs4all.nl/meuk/IE-zindexbug.html */
 ul.MenuBarActive
@@ -38,9 +36,11 @@ ul.MenuBarHorizontal li
 	position: relative;
 	text-align: center;
 	cursor: pointer;
-	width: 20%;
+	width: 25%;
 	float: left;
-	background-color: #000000;
+	color: #00C;
+	height: 50px;
+	background-color: #00F;
 }
 /* Submenus should appear below their parent (top: 0) with a higher z-index, but they are initially off the left side of the screen (-1000em) */
 ul.MenuBarHorizontal ul
@@ -94,16 +94,16 @@ ul.MenuBarHorizontal a
 {
 	display: block;
 	cursor: pointer;
-	background-color: #aaf;
+	background-color: #00F;
 	padding: 0.5em 0.75em;
-	color: #333;
+	color: #FFF;
 	text-decoration: none;
 }
 /* Menu items that have mouse over or focus have a blue background and white text */
 ul.MenuBarHorizontal a:hover, ul.MenuBarHorizontal a:focus
 {
-	background-color: #FFF;
-	color: #C96;
+	background-color: #00F;
+	color: #0F0;
 }
 /* Menu items that are open with submenus are set to MenuBarItemHover with a blue background and white text */
 ul.MenuBarHorizontal a.MenuBarItemHover, ul.MenuBarHorizontal a.MenuBarItemSubmenuHover, ul.MenuBarHorizontal a.MenuBarSubmenuVisible
@@ -159,6 +159,7 @@ ul.MenuBarHorizontal iframe
 	position: absolute;
 	z-index: 1010;
 	filter:alpha(opacity:0.1);
+
 }
 /* HACK FOR IE: to stabilize appearance of menu items; the slash in float is to keep IE 5.0 from parsing */
 @media screen, projection
@@ -166,7 +167,7 @@ ul.MenuBarHorizontal iframe
 	ul.MenuBarHorizontal li.MenuBarItemIE
 	{
 		display: inline;
-		f\loat: left;
-		background: #FFFFFF;
+		f\loat: center;
+		background: #00C;
 	}
 }
