--- a/index.css
+++ b/index.css
@@ -41,7 +41,8 @@ img, object, embed, video {
 .Block{
 	clear: both;
 	float: left;
-	margin-left: 1%;
+	margin-left: auto;
+	margin-right: auto;
 	width: 98%;
 	display: block;
 }
@@ -71,7 +72,6 @@ img, object, embed, video {
 		width: 80%;
 		display: block;
 		padding: 0;
-		padding-top: 5%;
 	}
 	#AboutMePhoto {
 		clear: both;
@@ -104,24 +104,23 @@ img, object, embed, video {
 }
 .Block{
 	clear: none;
-	float: left;
-	margin-left: 0;
-	width: 95%;
+	width: 98.8636%;
+	padding-left: 0.5681%;
+	padding-right: 0.5681%;
 	display: block;
-	padding-left: 5%;
 }
 .Title {
 	clear: both;
 	float: left;
-	margin-left: 0;
-	width: 80%;
+	Padding-left: 0;
+	width: 90%;
 	display: block;
 }
 .Attribute {
 	clear: none;
 	float: left;
-	margin-left: 1.1494%;
-	width: 24.1379%;
+	margin-left: 4%;
+	width: 20%;
 	display: block;
 }
 
@@ -139,6 +138,7 @@ img, object, embed, video {
 		float: left;
 		margin-left: 1.1494%;
 		width: 36.7816%;
+		min-width: 200px;
 		display: block;
 	}
 }
@@ -170,8 +170,8 @@ img, object, embed, video {
 .Attribute{
 	clear: none;
 	float: left;
-	margin-left: 5%;
-	width: 23%;
+	margin-left: 3%;
+	width: 20%;
 	display: block;
 }
 .Title{
@@ -197,7 +197,14 @@ img, object, embed, video {
 		float: left;
 		margin-left: 0.7633%;
 		width: 24.4274%;
+		min-width: 0;
 		display: block;
 	}
 
+}
+
+/* when the screen size is wayy too big */
+@media only screen and (min-width: 769px) {
+p{
+	font-size-adjust: large;
 }
