--- a/index.css
+++ b/index.css
@@ -37,6 +37,7 @@ img, object, embed, video {
 	width: 90%;
 	padding-left: 1.0795%;
 	padding-right: 1.0795%;
+	background-color: #00FF66;
 }
 .Block{
 	clear: both;
