--- a/index.css
+++ b/index.css
@@ -95,6 +95,10 @@ img, object, embed, video {
 /* Tablet Layout: 481px to 768px. Inherits styles from: Mobile Layout. */
 
 @media only screen and (min-width: 481px) {
+	
+h2{
+	font-size: x-small;
+}
 .gridContainer {
 	width: 98.8636%;
 	padding-left: 0.5681%;
@@ -139,6 +143,17 @@ img, object, embed, video {
 		min-width: 200px;
 		display: block;
 	}
+}
+
+@media only screen and (min-width: 500px) {
+h2{
+	font-size: small;
+}
+}
+@media only screen and (min-width: 650px) {
+h2{
+	font-size: medium;
+}
 }
 
 /* Desktop Layout: 769px to a max of 1232px.  Inherits styles from: Mobile Layout and Tablet Layout. */
