--- a/index.css
+++ b/index.css
@@ -97,7 +97,7 @@ img, object, embed, video {
 @media only screen and (min-width: 481px) {
 	
 h2{
-	font-size: x-small;
+	font-size: small;
 }
 .gridContainer {
 	width: 98.8636%;
@@ -145,11 +145,6 @@ h2{
 	}
 }
 
-@media only screen and (min-width: 500px) {
-h2{
-	font-size: small;
-}
-}
 @media only screen and (min-width: 650px) {
 h2{
 	font-size: medium;
@@ -161,7 +156,7 @@ h2{
 @media only screen and (min-width: 769px) {
 .gridContainer {
 	width: 80%;
-	max-width: 1000px;
+	/*max-width: 1000px;*/
 	padding-left: 0.303%;
 	padding-right: 0.303%;
 	/*margin: auto;*/
@@ -172,7 +167,7 @@ h2{
 }
 .Block{
 	width: 80%;
-	max-width: 1000px;
+	/*max-width: 1000px;*/
 	padding-left: 0.303%;
 	padding-right: 0.303%;
 	/*margin: auto;*/
@@ -217,7 +212,20 @@ h2{
 }
 
 /* when the screen size is wayy too big */
-@media only screen and (min-width: 769px) {
+@media only screen and (min-width: 1000px) {
 p{
-	font-size-adjust: large;
+	font-size: x-large;
+}
+h1{
+	font-size: x-large;
+}
+h2{
+	font-size: x-large;
+}
+h3{
+	font-size: x-large;
+}
+h4{
+	font-size: x-large;
+}
 }
