--- a/Projects/EcoCAR/index.css
+++ b/Projects/EcoCAR/index.css
@@ -37,58 +37,13 @@ img, object, embed, video {
 	width: 90%;
 	padding-left: 1.0795%;
 	padding-right: 1.0795%;
-	background-color: #00FF66;
 }
 .Block{
-	clear: both;
-	float: left;
 	margin-left: auto;
 	margin-right: auto;
-	width: 98%;
-	display: block;
-}
-.Title {
-	clear: both;
-	float: left;
-	margin-left: 5%;
-	width: 90%;
-	display: block;
-}
-.Attribute {
-	clear: none;
-	float: left;
-	margin-left: 5%;
-	width: 42.5%;
-	display: block;
-}
-
-
-#AboutMe {
-	background-color: #FFDFDF;
-}
-	#AboutMeText {
-		clear: both;
-		float: left;
-		margin-left: 5%;
-		width: 80%;
-		display: block;
-		padding: 0;
-	}
-	#AboutMePhoto {
-		clear: both;
-		float: left;
-		margin-left: 5%;
-		width: 90%;
-		display: block;
-	}
-#Interest {
-	background-color: #DFFFDF;
-}
-#Project {
-	background-color: #FCFEDA;
-}
-#Community{
-	background-color: #CBB0FF;
+	width: 94%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 
@@ -96,9 +51,6 @@ img, object, embed, video {
 
 @media only screen and (min-width: 481px) {
 	
-h2{
-	font-size: small;
-}
 .gridContainer {
 	width: 98.8636%;
 	padding-left: 0.5681%;
@@ -111,43 +63,26 @@ h2{
 	padding-right: 0.5681%;
 	display: block;
 }
-.Title {
-	clear: both;
-	float: left;
-	Padding-left: 0;
-	width: 90%;
-	display: block;
+.Paragraph{
+	width: 74%;
+	
 }
-.Attribute {
-	clear: none;
-	float: left;
-	margin-left: 4%;
-	width: 20%;
-	display: block;
+.Image{
+	clear: left;
+	float: right;
+	width: 24%;
 }
 
-#AboutMe {
-}
-	#AboutMeText {
-		clear: both;
-		float: left;
-		margin-left: 5%;
-		width: 49.4252%;
-		display: block;
-	}
-	#AboutMePhoto {
-		clear: none;
-		float: left;
-		margin-left: 1.1494%;
-		width: 36.7816%;
-		min-width: 200px;
-		display: block;
-	}
 }
 
 @media only screen and (min-width: 650px) {
 h2{
 	font-size: medium;
+}
+.gridContainer {
+	width: 96%;
+	color: #FFF;
+	margin-left: auto;
 }
 }
 
@@ -179,36 +114,11 @@ h2{
 	clear: none;
 	float: left;
 	margin-left: 3%;
+	padding-left: 5%;
+	padding-right: 5%;
 	width: 20%;
 	display: block;
 }
-.Title{
-	clear: both;
-	float: left;
-	margin-left: 5%;
-	width: 80%;
-	display: block;
-}
-
-#AboutMe {
-}
-	#AboutMeText {
-		clear: both;
-		float: left;
-		margin-left: 5%;
-		width: 65%;
-		display: block;
-		padding: 5pt;
-	}
-	#AboutMePhoto {
-		clear: none;
-		float: left;
-		margin-left: 0.7633%;
-		width: 24.4274%;
-		min-width: 0;
-		display: block;
-	}
-
 }
 
 /* when the screen size is wayy too big */
