--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -109,7 +109,7 @@ img, object, embed, video {
 
 @media only screen and (min-width: 650px) {
 h2{
-	font-size: medium;
+	font-size: 16px;
 }
 .gridContainer {
 	width: 96%;
@@ -169,19 +169,19 @@ h2{
 /* when the screen size is wayy too big */
 @media only screen and (min-width: 900px) {
 p{
-	font-size: x-large;
+	font-size: 24px;
 }
 h1{
-	font-size: x-large;
+	font-size: 24px;
 }
 h2{
-	font-size: x-large;
+	font-size: 24px;
 }
 h3{
-	font-size: x-large;
+	font-size: 24px;
 }
 h4{
-	font-size: x-large;
+	font-size: 24px;
 }
 
 }
