--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -88,7 +88,14 @@ img, object, embed, video {
 .Image{
 	clear: right;
 	float: right;
-	width: 29%;
+	width: 31%;
+}
+.Document{
+	clear: both;
+	float: left;
+	width: 100%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 #LayoutDiv1{
 	clear: both;
