--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -91,9 +91,10 @@ img, object, embed, video {
 	width: 31%;
 }
 .Document{
+	border: #666;
 	clear: both;
 	float: left;
-	width: 100%;
+	width: 90%;
 	padding-left: 5%;
 	padding-right: 5%;
 }
