--- a/index.css
+++ b/index.css
@@ -7,6 +7,11 @@ img, object, embed, video {
 	width: 100%;
 	alignment-adjust: central;
 }
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
 /* IE 6 does not support max-width so default to width 100% */
 .ie6 img {
 	width: 100%;
@@ -127,9 +132,12 @@ h2{
 
 /* Tablet Layout: 481px to 768px. Inherits styles from: Mobile Layout. */
 @media only screen and (min-width: 507px) {
-	
+h1 {
+	text-align: center;
+}	
 h2{
 	font-size: 10px;
+	text-align: center;
 }
 .gridContainer {
 	width: 98.8636%;
@@ -138,10 +146,10 @@ h2{
 }
 .Block{
 	clear: none;
-	width: 98.8636%;
-	padding-left: 0.5681%;
-	padding-right: 0.5681%;
+	width: 96.5%;
+	padding: 1.7045%;
 	display: block;
+	margin: 0;
 }
 .Title {
 	clear: both;
@@ -158,7 +166,11 @@ div.Section div.Section {
 	background: url("DSC01035.JPG");
 	background-size: auto 100%;
 }
-
+#Interest .Title{
+	margin-top: 10vh;
+	background: rgba(225,225,225,0.5);
+	border-radius: 15px;
+}
 .Attribute {
 	background:rgba(225,225,225,0.5);
 }
@@ -224,14 +236,20 @@ h2{
 	margin-left: 10%;
 }
 .Block{
-	width: 80%;
+	clear: none;
+	width: 70%;
+	padding: 10.7045%;
+	display: block;
+	margin: 0;
+	
+	
+	/*width: 96.5%;
 	/*max-width: 1000px;*/
-	padding-left: 0.303%;
-	padding-right: 0.303%;
+	padding-left: 15%;
+	padding-right: 15%;
 	/*margin: auto;*/
 	padding-top: 20px;
 	color: #000;
-	margin-left: 10%;
 }
 /*
 .Attribute{
