--- a/SpryAssets/SpryMenuBarHorizontal.css
+++ b/SpryAssets/SpryMenuBarHorizontal.css
@@ -51,7 +51,7 @@ ul.MenuBarHorizontal ul
 	font-size: 100%;
 	z-index: 1020;
 	cursor: default;
-	width: 8.2em;
+	width: 100%;
 	position: absolute;
 	left: -1000em;
 }
@@ -63,7 +63,7 @@ ul.MenuBarHorizontal ul.MenuBarSubmenuVisible
 /* Menu item containers are same fixed width as parent */
 ul.MenuBarHorizontal ul li
 {
-	width: 8.2em;
+	width: 100%;
 }
 /* Submenus should appear slightly overlapping to the right (95%) and up (-5%) */
 ul.MenuBarHorizontal ul ul
@@ -94,7 +94,7 @@ ul.MenuBarHorizontal a
 {
 	display: block;
 	cursor: pointer;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(8,8,8,0.85);
 	padding: 0.5em 0.75em;
 	color: #FFF;
 	text-decoration: none;
