background for projects

--- a/index.css
+++ b/index.css
@@ -179,7 +179,7 @@ div.Section div.Section {
 
 }
 #Project{
-	background: url("RandomNotes.png");
+	background: url("RandomNotes.PNG");
 	background-size: auto 100%;	
 }
 
