background for about me

--- a/index.css
+++ b/index.css
@@ -169,7 +169,7 @@ div.Section div.Section {
 	Clear: none;
 }
 #AboutMe{
-		background: url("Me.PNG");
+		background: url("Me.png");
 		background-size: 100% 100%;
 
 
