new section in main

--- a/index.css
+++ b/index.css
@@ -124,7 +124,7 @@ h2{
 	background-color: #FCFEDA;
 }
 #Community{
-	background-color: #CBB0FF;
+	background-color: #FFFFFF;
 	min-height: 25vh;
 }
 
