--- a/index.css
+++ b/index.css
@@ -116,6 +116,9 @@ h2{
 		width: 90%;
 		display: block;
 	}
+#Work {
+	min-height: 100vh;
+}
 #Interest {
 	background-color: #DFFFDF;
 	min-height: 100vh;
@@ -183,12 +186,15 @@ div.Section div.Section {
 	margin-top: 42vh;
 
 }
+#Work {
+	
+}
 
 #Interest {
 	background: url("DSC01035.JPG");
 	background-size: auto 100%;
 }
-#Interest .Title, #Project .Title{
+#Interest .Title, #Project .Title, #Work .Title{
 	margin-top: 10vh;
 	background: rgba(225,225,225,0.5);
 	border-radius: 15px;
