--- a/index.css
+++ b/index.css
@@ -196,6 +196,7 @@ div.Section div.Section {
 }
 #Interest .Title, #Project .Title, #Work .Title{
 	margin-top: 10vh;
+	margin-bottom: 5vh;
 	background: rgba(225,225,225,0.5);
 	border-radius: 15px;
 	margin-top: 10vh;
