--- a/index.css
+++ b/index.css
@@ -50,6 +50,7 @@ h2{
 	margin-right: auto;
 	padding-bottom: 3%;
 	width: 100%;
+	min-width: 260px;
 	display: block;
 }
 .Title {
@@ -68,8 +69,6 @@ h2{
 	
 }
 #Work .Section {
-	width: 90%;
-	margin-left: 5%;
 }
 .Attribute {
 	clear: none;
@@ -190,9 +189,6 @@ div.Section div.Section {
 	background: rgba(255,255,255,0.75);
 	margin-top: 42vh;
 }
-#Work {
-	
-}
 
 #Interest {
 	background: url("DSC01035.JPG");
@@ -213,7 +209,17 @@ div.Section div.Section {
 
 
 .Attribute {
-	background:rgba(150,150,150,0.5);
+	background:rgba(225,225,225,0.5);
+}
+#Work .Attribute{
+	background: #00FF00;
+	height: 37vh;
+}
+#Community .Section .Section {
+	width: 50%;
+}
+#Community .Section {
+	width: 100%;
 }
 /*	clear: none;
 	float: left;
@@ -227,7 +233,7 @@ div.Section div.Section {
 	box-shadow: 10px 10px 8px #111;
 	-webkit-box-shadow: 10px 10px 8px #111;
 	-moz-box-shadow: 10px 10px 8px #111;
-	Background: rgba(255,255,255,1);
+	Background: rgba(235,235,235,1);
 }
 /*	margin: 0%;
 	width: 19%;
@@ -263,9 +269,9 @@ h2{
 }
 }
 
-/* Desktop Layout: 769px to a max of 1232px.  Inherits styles from: Mobile Layout and Tablet Layout. */
+/* Desktop Layout:*/
 
-@media only screen and (min-width: 767px) {
+@media only screen and (min-width: 875px) {
 .gridContainer {
 	width: 80%;
 	/*max-width: 1000px;*/
@@ -311,13 +317,14 @@ h2{
 .Title{
 	clear: both;
 	float: left;
-	margin-left: 5%;
+	margin-left: 10%;
 	width: 80%;
 	display: block;
 }
 .Text {
 	margin-top: 20vh;
 }
+
 #AboutMe {
 }
 	#AboutMeText {
