--- a/index.css
+++ b/index.css
@@ -211,9 +211,11 @@ div.Section div.Section {
 .Attribute {
 	background:rgba(225,225,225,0.5);
 }
+#Work .Section {
+	width: 100%;
+}
 #Work .Attribute{
-	background: #00FF00;
-	height: 37vh;
+	height: 37%;
 }
 #Community .Section .Section {
 	width: 50%;
